grammar.js
    source_file: $ => repeat($._top_level_item),

    _top_level_item: $ => choice(
      $.class_definition,
      $.struct_definition,
      $.enum_definition,
      $.const_definition,
      $.include_directive,
      $.version_directive,
      $.function_definition,
      alias($._global_declaration, $.declaration),
    ),

    // =========================================================================
    // Include and Version directives
    // =========================================================================

    class_definition: $ => prec(1, seq(
      optional($.class_modifier),
      keyword('class'),
      field('name', $._type_identifier),
      optional($.inheritance_specifier),
      optional($.class_flags),
      '{',
      repeat($._class_body_item),
      '}',
    )),

    inheritance_specifier: $ => seq(
      ':',
      field('parent', $._dottable_type_identifier),
    ),

    class_flags: $ => repeat1($.class_flag),

    class_flag: $ => choice(
      keyword('abstract'),
      keyword('final'),
      keyword('native'),
      keyword('ui'),
      keyword('play'),
      seq(keyword('replaces'), $._dottable_type_identifier),
      seq(keyword('sealed'), '(', commaSep1($.identifier), ')'),
      $._version_modifier,
      $._deprecated_modifier,
    ),

    // =========================================================================
    // Struct definition
    // =========================================================================

    struct_definition: $ => seq(
      optional(keyword('extend')),
      keyword('struct'),
      field('name', $._type_identifier),
      optional($.struct_flags),
      '{',
      repeat($._struct_body_item),
      '}',
      optional(';'),
    ),

    struct_flags: $ => repeat1($.struct_flag),

    struct_flag: $ => choice(
      keyword('ui'),
      keyword('play'),
      keyword('clearscope'),
      keyword('native'),
      $._unsafe_internal_modifier,
      $._version_modifier,
      $._deprecated_modifier,
    ),

    _struct_body_item: $ => choice(
      $.method_definition,
      $.field_declaration,
      $.const_definition,
      $.enum_definition,
    ),

    // =========================================================================
    // Enum definition
    // =========================================================================

    _class_body_item: $ => choice(
      $.method_definition,
      $.field_declaration,
      $.default_block,
      $.states_block,
      $.property_definition,
      $.flag_definition,
      $.const_definition,
      $.enum_definition,
      $.mixin_statement,
      $.static_const_array,
    ),

    // =========================================================================
    // Field declaration
    // =========================================================================

    field_declaration: $ => seq(
      optional($.member_modifiers),
      typedDeclaratorList($.type_specifier, $._variable_declarator),
    ),

    member_modifiers: $ => prec.left(repeat1($.member_modifier)),

    member_modifier: $ => choice(
      keyword('abstract'),
      keyword('native'),
      keyword('static'),
      keyword('private'),
      keyword('protected'),
      keyword('latent'),
      keyword('final'),
      keyword('meta'),
      keyword('transient'),
      keyword('norollback'),
      keyword('readonly'),
      keyword('internal'),
      keyword('virtual'),
      keyword('override'),
      keyword('vararg'),
      keyword('ui'),
      keyword('play'),
      keyword('clearscope'),
      $._unsafe_clearscope_modifier,
      keyword('virtualscope'),
      seq(keyword('action'), optional($.states_options)),
      $._version_modifier,
      $._deprecated_modifier,
    ),

    _deprecated_modifier: $ => seq(
      keyword('deprecated'),
      '(',
      $.string_literal,
      optional(seq(',', $.string_literal)),
      ')',
    ),

    _version_modifier: $ => seq(
      keyword('version'),
      '(',
      $.string_literal,
      ')',
    ),

    _unsafe_clearscope_modifier: _ => unsafeModifier('clearscope'),

    _unsafe_internal_modifier: _ => unsafeModifier('internal'),

    _return_type: $ => choice(
      $.type_specifier,
      $.multi_return_type,
    ),

    _variable_declarator: $ => choice(
      $.array_declarator,
      $.init_declarator,
      $.identifier,
    ),

    // =========================================================================
    // Method definition
    // =========================================================================

    method_definition: $ => seq(
      optional($.member_modifiers),
      field('type', $._return_type),
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      optional($.const_qualifier),
      choice(
        field('body', $.compound_statement),
        ';',
      ),
    ),

    const_qualifier: _ => choice(
      keyword('const'),
      unsafeModifier('const'),
    ),

    multi_return_type: $ => prec.right(seq(
      $.type_specifier,
      repeat1(seq(',', $.type_specifier)),
    )),

    // =========================================================================
    // Property and Flag definitions
    // =========================================================================

    property_definition: $ => seq(
      keyword('property'),
      field('name', $.identifier),
      ':',
      commaSep1(field('field', $.identifier)),
      ';',
    ),

    flag_definition: $ => seq(
      keyword('flagdef'),
      optional(keyword('internal')),
      field('name', $.identifier),
      ':',
      field('field', $.identifier),
      ',',
      field('bit', $.number_literal),
      ';',
    ),

    // =========================================================================
    // Mixin statement
    // =========================================================================

    static_const_array: $ => seq(
      keyword('static'),
      keyword('const'),
      field('type', $.type_specifier),
      field('name', $.identifier),
      '[',
      ']',
      '=',
      $.initializer_list,
      ';',
    ),

    // =========================================================================
    // Default block
    // =========================================================================

    states_options: $ => seq(
      '(',
      commaSep1($.identifier),
      ')',
    ),

    primitive_type: _ => choice(
      ...SHADOWABLE_PRIMITIVE_TYPE_WORDS.map(word => token(prec(-1, wordPattern(word)))),
      token(prec(-1, wordPattern('statelabel'))),
      token(prec(-1, wordPattern('spriteid'))),
      token(prec(-1, wordPattern('textureid'))),
      token(prec(-1, wordPattern('voidptr'))),
      token(prec(-1, wordPattern('let'))),
    ),

    array_declarator: $ => prec(1, seq(
      field('declarator', $.declarator),
      '[',
      field('size', optional($.expression)),
      ']',
    )),

    init_declarator: $ => prec(1, seq(
      field('declarator', choice(
        $.identifier,
        $.array_declarator,
      )),
      '=',
      field('value', choice($.expression, $.initializer_list)),
    )),

    // =========================================================================
    // Parameter list
    // =========================================================================

    parameter_list: $ => seq(
      '(',
      optional(choice(
        keywordWithPrecedence('void', 1),
        commaSep($.parameter_declaration),
      )),
      ')',
    ),

    parameter_declaration: $ => choice(
      '...',
      seq(
        optional($.parameter_modifiers),
        field('type', $.type_specifier),
        optional('&'),
        field('declarator', $.identifier),
        optional(seq('=', field('default', $.expression))),
      ),
    ),

    parameter_modifiers: $ => prec.left(repeat1($.parameter_modifier)),

    parameter_modifier: _ => choice(
      keyword('in'),
      keyword('out'),
    ),

    // =========================================================================
    // Statements
    // =========================================================================

    compound_statement: $ => seq(
      '{',
      repeat($._block_item),
      '}',
    ),

    _block_item: $ => choice(
      alias($._local_declaration, $.declaration),
      $.statement,
      $.static_const_array,
    ),

    expression_statement: $ => seq(
      optional($.expression),
      ';',
    ),

    return_statement: $ => seq(
      keyword('return'),
      optional(choice(
        $.return_value_list,
        $.expression,
      )),
      ';',
    ),

    return_value_list: $ => choice(
      prec.right(seq(
        $.expression,
        repeat1(seq(',', $.expression)),
      )),
      seq(
        '(',
        commaSep1($.expression),
        optional(','),
        ')',
      ),
    ),

    _assignment_left_expression: $ => choice(
      $.identifier,
      $.call_expression,
      $.field_expression,
      $.pointer_expression,
      $.subscript_expression,
      $.parenthesized_expression,
      $.array_pattern,
    ),

    // Array destructuring pattern: [a, b] = expr
    assignment_expression: $ => prec.right(PREC.ASSIGNMENT, seq(
      field('left', $._assignment_left_expression),
      field('operator', choice(
        '=',
        '*=',
        '/=',
        '%=',
        '+=',
        '-=',
        '<<=',
        '>>=',
        '>>>=',
        '&=',
        '^=',
        '|=',
      )),
      field('right', $.expression),
    )),

    binary_expression: $ => {
      const table = [
        ['+', PREC.ADD],
        ['-', PREC.ADD],
        ['*', PREC.MULTIPLY],
        ['/', PREC.MULTIPLY],
        ['%', PREC.MULTIPLY],
        ['||', PREC.LOGICAL_OR],
        ['&&', PREC.LOGICAL_AND],
        ['|', PREC.INCLUSIVE_OR],
        ['^', PREC.EXCLUSIVE_OR],
        ['&', PREC.BITWISE_AND],
        ['==', PREC.EQUAL],
        ['!=', PREC.EQUAL],
        ['~==', PREC.EQUAL], // Case-insensitive string comparison
        ['>', PREC.RELATIONAL],
        ['>=', PREC.RELATIONAL],
        ['<=', PREC.RELATIONAL],
        ['<', PREC.RELATIONAL],
        ['<>=', PREC.RELATIONAL], // ZScript three-way comparison
        ['<<', PREC.SHIFT],
        ['>>', PREC.SHIFT],
        ['>>>', PREC.SHIFT], // Unsigned right shift
        ['..', PREC.CONCAT], // String concatenation
        ['is', PREC.RELATIONAL], // Type check
        ['cross', PREC.MULTIPLY], // Vector cross product
        ['dot', PREC.MULTIPLY], // Vector dot product
        ['**', PREC.MULTIPLY], // Power
      ];

      return choice(...table.map(([operator, precedence]) => {
        return prec.left(precedence, seq(
          field('left', $.expression),
          // @ts-ignore
          field('operator', operator),
          field('right', $.expression),
        ));
      }));
    },

    call_expression: $ => prec(PREC.CALL, seq(
      field('function', $.expression),
      field('arguments', $.argument_list),
    )),

    argument_list: $ => seq(
      '(',
      commaSep(choice(
        $.expression,
        $.named_argument,
      )),
      ')',
    ),

    named_argument: $ => seq(
      field('name', $.identifier),
      ':',
      field('value', $.expression),
    ),

    field_expression: $ => seq(
      prec(PREC.FIELD, seq(
        field('argument', $.expression),
        field('operator', '.'),
      )),
      field('field', $._field_identifier),
    ),

    parenthesized_expression: $ => prec(PREC.PAREN_DECLARATOR, seq(
      '(',
      $.expression,
      ')',
    )),

    // Vector literal - (x, y) or (x, y, z) or (x, y, z, w)
    super_expression: _ => keywordWithPrecedence('super', 1),

    // =========================================================================
    // Initializer list
    // =========================================================================

    initializer_list: $ => seq(
      '{',
      commaSep(choice(
        $.expression,
        $.initializer_list,
      )),
      optional(','),
      '}',
    ),

    // =========================================================================
    // Literals
    // =========================================================================

    number_literal: _ => {
      const separator = "'";
      const hex = /[0-9a-fA-F]/;
      const decimal = /[0-9]/;
      const hexDigits = seq(repeat1(hex), repeat(seq(separator, repeat1(hex))));
      const decimalDigits = seq(repeat1(decimal), repeat(seq(separator, repeat1(decimal))));
      return token(seq(
        optional(/[-+]/),
        choice(
          seq(
            choice(
              decimalDigits,
              seq(/0b/i, /[01]+/),
              seq(/0x/i, hexDigits),
            ),
            optional(seq('.', optional(hexDigits))),
          ),
          seq('.', decimalDigits),
        ),
        optional(seq(
          /[ep]/i,
          optional(/[-+]/),
          hexDigits,
        )),
        /[ulf]*/i,
      ));
    },

    string_literal: $ => seq(
      '"',
      repeat(choice(
        alias(token.immediate(prec(1, /[^\\"\n]+/)), $.string_content),
        $.escape_sequence,
      )),
      '"',
    ),

    true: _ => keyword('true', true),
    identifier: $ => choice(
      $._word_identifier,
      $._shadowable_identifier,
    ),

    _word_identifier: _ => NON_RESERVED_IDENTIFIER_PATTERN,

    _shadowable_identifier: $ => choice(
      ...SHADOWABLE_IDENTIFIER_WORDS.map(word => keywordIdentifier($, word)),
    ),

    _dottable_type_identifier: $ => alias($.dottable_name, $.type_identifier),

    _type_identifier: $ => alias($.identifier, $.type_identifier),
    _field_identifier: $ => alias($.identifier, $.field_identifier),
