test/corpus/methods.txt
================================================================================
Simple method
================================================================================

class Test {
    void DoSomething() {
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (method_definition
      type: (type_identifier
        (identifier))
      name: (identifier)
      parameters: (parameter_list)
      body: (compound_statement))))

================================================================================
Method with explicit void parameter list
================================================================================

class Test {
    void Tick(void) {
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (method_definition
      type: (type_identifier
        (identifier))
      name: (identifier)
      parameters: (parameter_list)
      body: (compound_statement))))

================================================================================
Method with shadowable parameter name
================================================================================

class Test : Actor {
    action void A_FlashOverlay(int layer = -3, statelabel state = "MuzzleFlash") {
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (inheritance_specifier
      parent: (type_identifier
        (identifier)))
    (method_definition
      (member_modifiers
        (member_modifier))
      type: (type_identifier
        (identifier))
      name: (identifier)
      parameters: (parameter_list
        (parameter_declaration
          type: (type_identifier
            (identifier))
          declarator: (identifier)
          default: (number_literal))
        (parameter_declaration
          type: (primitive_type)
          declarator: (identifier
            (identifier))
          default: (string_literal
            (string_content))))
      body: (compound_statement))))

================================================================================
Method with return type
================================================================================

class Test {
    int GetValue() {
        return 42;
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (method_definition
      type: (type_identifier
        (identifier))
      name: (identifier)
      parameters: (parameter_list)
      body: (compound_statement
        (return_statement
          (number_literal))))))

================================================================================
Override method
================================================================================

class Test : Actor {
    override void Tick() {
        super.Tick();
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (inheritance_specifier
      parent: (type_identifier
        (identifier)))
    (method_definition
      (member_modifiers
        (member_modifier))
      type: (type_identifier
        (identifier))
      name: (identifier)
      parameters: (parameter_list)
      body: (compound_statement
        (expression_statement
          (call_expression
            function: (field_expression
              argument: (super_expression)
              field: (field_identifier))
            arguments: (argument_list)))))))

================================================================================
Virtual method
================================================================================

class Test {
    virtual void OnDeath() {
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (method_definition
      (member_modifiers
        (member_modifier))
      type: (type_identifier
        (identifier))
      name: (identifier)
      parameters: (parameter_list)
      body: (compound_statement))))

================================================================================
Static method
================================================================================

class Math {
    static double Lerp(double a, double b, double t) {
        return a + (b - a) * t;
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (method_definition
      (member_modifiers
        (member_modifier))
      type: (type_identifier
        (identifier))
      name: (identifier)
      parameters: (parameter_list
        (parameter_declaration
          type: (type_identifier
            (identifier))
          declarator: (identifier))
        (parameter_declaration
          type: (type_identifier
            (identifier))
          declarator: (identifier))
        (parameter_declaration
          type: (type_identifier
            (identifier))
          declarator: (identifier)))
      body: (compound_statement
        (return_statement
          (binary_expression
            left: (identifier)
            right: (binary_expression
              left: (parenthesized_expression
                (binary_expression
                  left: (identifier)
                  right: (identifier)))
              right: (identifier))))))))

================================================================================
Method with multiple modifiers
================================================================================

class Test {
    clearscope static double GetDist() {
        return 0;
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (method_definition
      (member_modifiers
        (member_modifier)
        (member_modifier))
      type: (type_identifier
        (identifier))
      name: (identifier)
      parameters: (parameter_list)
      body: (compound_statement
        (return_statement
          (number_literal))))))

================================================================================
Action method
================================================================================

class Test : Actor {
    action void A_Fire() {
        A_SpawnProjectile("Fireball");
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (inheritance_specifier
      parent: (type_identifier
        (identifier)))
    (method_definition
      (member_modifiers
        (member_modifier))
      type: (type_identifier
        (identifier))
      name: (identifier)
      parameters: (parameter_list)
      body: (compound_statement
        (expression_statement
          (call_expression
            function: (identifier)
            arguments: (argument_list
              (string_literal
                (string_content)))))))))

================================================================================
Method with multiple return types
================================================================================

class Test {
    action bool, int IsHoldingBarrel() {
        return true, 1;
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (method_definition
      (member_modifiers
        (member_modifier))
      type: (multi_return_type
        (type_identifier
          (identifier))
        (type_identifier
          (identifier)))
      name: (identifier)
      parameters: (parameter_list)
      body: (compound_statement
        (return_statement
          (return_value_list
            (true)
            (number_literal)))))))

================================================================================
Shadowable built-in names in method positions
================================================================================

class Test {
    void property(int default, int array) {
        default = array;
        owner.default = array;
        Call(default: default, property: array);
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (method_definition
      type: (type_identifier
        (identifier))
      name: (identifier
        (identifier))
      parameters: (parameter_list
        (parameter_declaration
          type: (type_identifier
            (identifier))
          declarator: (identifier
            (identifier)))
        (parameter_declaration
          type: (type_identifier
            (identifier))
          declarator: (identifier
            (identifier))))
      body: (compound_statement
        (expression_statement
          (assignment_expression
            left: (identifier
              (identifier))
            right: (identifier
              (identifier))))
        (expression_statement
          (assignment_expression
            left: (field_expression
              argument: (identifier)
              field: (field_identifier
                (identifier)))
            right: (identifier
              (identifier))))
        (expression_statement
          (call_expression
            function: (identifier)
            arguments: (argument_list
              (named_argument
                name: (identifier
                  (identifier))
                value: (identifier
                  (identifier)))
              (named_argument
                name: (identifier
                  (identifier))
                value: (identifier
                  (identifier))))))))))
